--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -5,7 +5,7 @@
 
     <fragment
         android:id="@+id/marketListFragment"
-        android:name="com.ajbell.technicaltest.list.MarketListFragment"
+        android:name="com.a.technicaltest.list.MarketListFragment"
         android:label="MarketListFragment" >
         <action
             android:id="@+id/action_marketListFragment_to_marketDetailFragment"
@@ -14,6 +14,6 @@
 
     <composable
         android:id="@+id/marketDetailScreen"
-        android:name="com.ajbell.technicaltest.detail.MarketDetailsScreenKt\$MarketDetailScreen"
+        android:name="com.a.technicaltest.detail.MarketDetailsScreenKt\$MarketDetailScreen"
         android:label="Detail Screen" />
 </navigation>
