--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Ajbelltechnicaltest" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.ATechnicalTest" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -18,5 +18,5 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.AJBell.UI.Demo" parent="android:Theme.Material.NoActionBar" />
+    <style name="Theme.ATechnicalTest.UI.Demo" parent="android:Theme.Material.NoActionBar" />
 </resources>
